### Add Production envrionement. In production envrionment, use gdalsrsinfo. In dev, use the same command but through a call to a docker (HEAD -> main)
>Wed, 12 Oct 2022 03:21:18 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Upadte the version of COTS
>Wed, 12 Oct 2022 03:06:25 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix count Ws by changing the order of the routes in the router
>Wed, 12 Oct 2022 03:05:29 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add GML transformation for OGC bridge (origin/main, origin/HEAD)
>Tue, 11 Oct 2022 18:50:24 +0200

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Remove IAU logo Add PADC logo (tag: v0.9.1)
>Tue, 7 Jun 2022 11:23:35 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix comma in setup.py
>Mon, 9 May 2022 15:56:17 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix missing logo
>Mon, 9 May 2022 15:52:16 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix vendor name for deploy Fix logo problem
>Mon, 9 May 2022 15:13:39 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Change vendor name of the docker image
>Mon, 9 May 2022 14:51:24 +0200
